fix(site): sidenav subtitle vert over-spacing

--- a/packages/site/src/common/components/side-nav/logo.module.css
+++ b/packages/site/src/common/components/side-nav/logo.module.css
@@ -29,6 +29,7 @@
   padding-top: var(--psLayoutSpacingXSmall);
 }
 .textTitle {
+  display: block;
   font-size: 8px; /* TODO: not in ds */
   color: var(--psColorsGray03);
   font-weight: var(--psTypeFontWeightMedium);
